Fix mis-aligned pre-sort and live-sort of workspace tree nodes
Removed pre-sorting but also addressed the problem with the path comparator in the first place. The problem was if you had the following classes:

- comx/Foo
- com/Foo

The shorter 'com' package should be first, but the named comparator was seeing '/' vs 'x' and declaring 'x' should go first. So we were not properly handling directory checks.

But since we insertion sort to check for existing items anyway, there is no longer a need to pre-sort, which we did because we used to do insertion sort. So that also gets removed here.