@@ -1,5 +1,7 @@
 package software.coley.recaf.ui.control.tree;
 
+import jakarta.annotation.Nonnull;
+import javafx.collections.ObservableList;
 import javafx.scene.control.TreeItem;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Nested;
@@ -35,10 +37,14 @@ import software.coley.recaf.workspace.model.resource.WorkspaceResource;
 import software.coley.recaf.workspace.model.resource.WorkspaceResourceBuilder;
 
 import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.function.Function;
+import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static software.coley.recaf.test.TestClassUtils.*;
@@ -280,9 +286,66 @@ class WorkspaceTreeNodeTest {
 		assertSame(a1, a1_alt, "Same path yielded different node references");
 
 		// Different node check
-		List.of(a2,a3,a4,a5).forEach(n -> {
+		List.of(a2, a3, a4, a5).forEach(n -> {
 			assertNotNull(n, "Expected node to be created");
 			assertNotSame(a1, n, "Different path yielded same node reference");
+		});
+	}
+
+	/**
+	 * Similar to {@link #nameOverloadSensitivity()} and {@link #emptyDirDoesNotNamedPathSorting()} but also covers a case
+	 * with old code in {@link WorkspaceRootTreeNode} where we pre-sorted items before insertion and then ignored the
+	 * binary search's returned index to instead always append to the end of the list. This meant that items with
+	 * different names could wind up in the wrong order if the pre-sort was wrong.
+	 * <p>
+	 * The pre-sorting was wrong specifically in the following case:
+	 * <ul>
+	 *     <li>com/example/treemap</li>
+	 *     <li>com/example/treeview</li>
+	 *     <li>com/example/tree</li>
+	 * </ul>
+	 * The pre-sort would put "tree" after "treemap" and "treeview", but the binary search would find that "tree"
+	 * should be before both of them. So why was the pre-sort wrong? Because the named path comparator was getting confused
+	 * when comparing full class names in the packages. If you look at the index 16 of the string
+	 * (where the '/' would be after "tree") you have the comparator comparing "/" vs "m" or "v".
+	 * <p>
+	 * This has since been fixed in the named path comparator, and we no longer pre-sort before insertion.
+	 * However, this test is still useful to ensure that the sorting logic does not regress.
+	 */
+	@Test
+	void nameOrdering() {
+		WorkspaceTreeNode root = new WorkspaceTreeNode(p5);
+		Function<String, ClassPathNode> func = dir -> p3c.child(dir).child(new StubClassInfo(dir + "/Clazz"));
+		String n0dir = "";
+		String n1dir = "a";
+		String n2dir = "aa";
+		String n3dir = "aaa";
+		ClassPathNode n0 = func.apply(n0dir);
+		ClassPathNode n1 = func.apply(n1dir);
+		ClassPathNode n1s = func.apply(n1dir + "/a");
+		ClassPathNode n2 = func.apply(n2dir);
+		ClassPathNode n2s = func.apply(n2dir + "/a");
+		ClassPathNode n3 = func.apply(n3dir);
+		ClassPathNode n3s = func.apply(n3dir + "/a");
+		permutations(List.of(n0, n1, n1s, n2, n2s, n3, n3s)).forEach(ordered -> {
+			// Clear children from prior permutation run.
+			root.getSourceChildren().clear();
+
+			// Insert in this order.
+			for (ClassPathNode path : ordered) {
+				WorkspaceTreeNode node = WorkspaceTreeNode.getOrInsertIntoTree(root, path);
+				assertNotNull(node, "Node not created for path: " + path.getValue().getName());
+			}
+
+			// Assert sorted order.
+			// Regardless of the permuted insertion order, the final tree order should always be the same.
+			WorkspaceTreeNode bundle = root.getOrCreateNodeByPath(p3c);
+			ObservableList<TreeItem<PathNode<?>>> children = bundle.getSourceChildren();
+			assertEquals(4, children.size(), "Expected 4 directory children");
+			assertEquals(n0dir, children.get(0).getValue().getValue());
+			assertEquals(n1dir, children.get(1).getValue().getValue());
+			assertEquals(n2dir, children.get(2).getValue().getValue());
+			assertEquals(n3dir, children.get(3).getValue().getValue());
 		});
 	}
 
@@ -297,20 +360,34 @@ class WorkspaceTreeNodeTest {
 	@Test
 	void emptyDirDoesNotNamedPathSorting() {
 		WorkspaceTreeNode root = new WorkspaceTreeNode(p5);
-		WorkspaceTreeNode bundle = root.getOrCreateNodeByPath(p3c);
 
-		// Our 'WorkspaceRootTreeNode' pre-sorts paths so it will use this specific method and set 'sorted=true'
-		// which is not the default value. This covers a special case where the 'default package' / 'root directory'
-		// was throwing off tree sorting before we added a special case for it.
-		WorkspaceTreeNode empty = WorkspaceTreeNode.getOrInsertIntoTree(root, p3c.child("").child(new StubClassInfo("module-info")), true);
-		WorkspaceTreeNode ex1 = WorkspaceTreeNode.getOrInsertIntoTree(root, p3c.child("example").child(new StubClassInfo("Foo")), true);
-		WorkspaceTreeNode ex2 = WorkspaceTreeNode.getOrInsertIntoTree(root, p3c.child("example").child(new StubClassInfo("Bar")), true);
+		// No matter what insertion order, the tree should sort correctly.
+		ClassPathNode childModule = p3c.child("").child(new StubClassInfo("module-info"));
+		ClassPathNode childFoo = p3c.child("example").child(new StubClassInfo("example/Foo"));
+		ClassPathNode childBar = p3c.child("example").child(new StubClassInfo("example/Bar"));
+		permutations(List.of(childModule, childFoo, childBar)).forEach(ordered -> {
+			// Clear children from prior permutation run.
+			root.getSourceChildren().clear();
 
-		// The tree should have both example paths have the same parent "example" node.
-		// The bundle should see two children, the empty directory, and the "example" directory.
-		List<TreeItem<PathNode<?>>> children = bundle.getSourceChildren();
-		assertSame(ex1.getParent(), ex2.getParent());
-		assertEquals(2, children.size());
+			// Insert in this order.
+			WorkspaceTreeNode bundle = root.getOrCreateNodeByPath(p3c);
+			for (ClassPathNode path : ordered) {
+				WorkspaceTreeNode node = WorkspaceTreeNode.getOrInsertIntoTree(root, path);
+				assertNotNull(node, "Node not created for path: " + path.getValue().getName());
+			}
+
+			// Fetch now that tree is built.
+			WorkspaceTreeNode ex1 = WorkspaceTreeNode.getOrInsertIntoTree(root, childFoo);
+			WorkspaceTreeNode ex2 = WorkspaceTreeNode.getOrInsertIntoTree(root, childBar);
+			WorkspaceTreeNode exM = WorkspaceTreeNode.getOrInsertIntoTree(root, childModule);
+
+			// The tree should have both example paths have the same parent "example" node.
+			// The bundle should see two children, the empty directory, and the "example" directory.
+			List<TreeItem<PathNode<?>>> children = bundle.getSourceChildren();
+			assertNotEquals(exM.getParent(), ex1.getParent()); // default-package vs example package
+			assertSame(ex1.getParent(), ex2.getParent()); // both in example package
+			assertEquals(2, children.size()); // example/ and default-package/
+		});
 	}
 
 	@Test
@@ -442,6 +519,7 @@ class WorkspaceTreeNodeTest {
 	}
 
 	@Test
+	@SuppressWarnings("deprecation")
 	void matches() {
 		WorkspaceTreeNode root = new WorkspaceTreeNode(p5);
 		root.getOrCreateNodeByPath(p1a);
@@ -450,13 +528,33 @@ class WorkspaceTreeNodeTest {
 		// Should yield the class info node.
 		WorkspaceTreeNode child = root;
 		while (!child.getChildren().isEmpty())
-			child = (WorkspaceTreeNode) child.getChildren().get(0);
+			child = (WorkspaceTreeNode) child.getChildren().getFirst();
+
+		// Validate it is the node for the class info.
+		assertTrue(child.matches(p1a));
+
+		// Now do the same, but following the "source" tree.
+		while (!child.getSourceChildren().isEmpty())
+			child = (WorkspaceTreeNode) child.getSourceChildren().getFirst();
 
 		// Validate it is the node for the class info.
 		assertTrue(child.matches(p1a));
 	}
 
+	@Nonnull
+	private static <T> Stream<List<T>> permutations(@Nonnull Collection<T> input) {
+		if (input.size() == 1)
+			return Stream.of(new ArrayList<>(input));
+		return input.stream()
+				.flatMap(first -> permutations(input.stream()
+						.filter(a -> !a.equals(first))
+						.toList())
+						.map(ArrayList::new)
+						.peek(l -> l.addFirst(first)));
+	}
+
 	@Nested
+	@SuppressWarnings("deprecation") // Intentionally testing filtered API which is marked deprecated to discourage use.
 	class Filtered {
 		@Test
 		void insertWhileFilteredStillUpdatesChildren() {
